# wolfCoolStock

./: CMakeLists.txt  Makefile  README.md  author  wolf3d
include/: get_next_line.h  wolf3d.h
lib/SDL/SDL2.framework/Headers/: SDL.h.gch
lib/SDL/SDL2.framework/Versions/Current/Headers/: SDL.h.gch
lib/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_free.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_minus.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_space.c  ft_str_index_next.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcount.c  (+27 more)
maps/: map_big.fdf  map_first.fdf  map_lab.fdf  map_surp.fdf
src/: draw_map.c  ft_fps.c  ft_init_varible.c  ft_valid.c  game.c  get_next_line.c  keys.c  keys_2.c  main.c  raycast.c  raycast_2.c  sdl.c  valid_help.c  valid_help_2.c
